apps/shiplog/tests/workstreams/snapshots/workstreams__cluster_snapshot__empty_workstreams.snap
---
source: apps/shiplog/tests/workstreams/cluster_snapshot.rs
assertion_line: 95
expression: ws.workstreams
---
[]
