apps/shiplog/tests/workstreams/snapshots/workstreams__cluster_snapshot__mixed_kinds_stats.snap
---
source: apps/shiplog/tests/workstreams/cluster_snapshot.rs
assertion_line: 114
expression: stats
---
- - org/proj
  - pull_requests: 2
    reviews: 2
    manual_events: 1
